@@ -35,7 +35,7 @@ using System.IO;
 using System.Text;
 using DiscImageChef.Devices;
 
-namespace DiscImageChef.Core
+namespace DiscImageChef.Core.Logging
 {
     public class MHDDLog
     {
