@@ -3,6 +3,13 @@
 	* DiscImageChef.csproj:
 	* Commands/DumpMedia.cs:
 	* Commands/MediaScan.cs:
+	  Refactor: Move MHDDLog to Core.
+
+2017-05-27  Natalia Portillo  <claunia@claunia.com>
+
+	* DiscImageChef.csproj:
+	* Commands/DumpMedia.cs:
+	* Commands/MediaScan.cs:
 	  Refactor: Move IBGLog to Core.
 
 2017-05-27  Natalia Portillo  <claunia@claunia.com>
