@@ -1,5 +1,10 @@
 2017-05-27  Natalia Portillo  <claunia@claunia.com>
 
+	* MHDDLog.cs:
+	* DiscImageChef.Core.csproj: Refactor: Move MHDDLog to Core.
+
+2017-05-27  Natalia Portillo  <claunia@claunia.com>
+
 	* IBGLog.cs:
 	* DiscImageChef.Core.csproj: Refactor: Move IBGLog to Core.
 
